<resources>
    <string name="app_name">UniTrip</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logInText">Log In</string>
    <string name="logInButton">Enter</string>
    <string name="signUpText">Don´t have an account?</string>
    <string name="signUpLink">Sign Up</string>
    <string name="emailHint">Enter your email</string>
    <string name="passwordHint">Enter your password</string>
    <string name="firstNameHint">Enter your first name</string>
    <string name="lastNameHint">Enter your last name</string>
    <string name="userHint">Enter your username</string>
    <string name="addressHint">Enter your address (Optional)</string>
    <string name="phoneHint">Enter your phone (Optional)</string>
    <string name="phoneHintEU">Enter your phone</string>
    <string name="emailView">Email:</string>
    <string name="passwordView">Password:</string>
    <string name="firstNameView">First Name:</string>
    <string name="lastNameView">Last Name:</string>
    <string name="userView">Username:</string>
    <string name="addressView">Address (Optional):</string>
    <string name="phoneView">Phone</string>
    <string name="btnNextTxt">Continue</string>
    <string name="btnRegister">Register</string>
    <string name="SignUpTitle">Sign Up</string>
    <string name="logTxtLay">Already have an account?</string>
    <string name="logLinkLay">Log In</string>
    <string name="uploadBtn">Upload</string>
    <string name="fullNameViewPfp">Gustavo Isai Gomez Alvarez</string>
    <string name="usernameViewPfp">Gigakai</string>
    <string name="saveBtnE">Save Draft</string>
    <string name="saveBtnU">Save</string>
    <string name="cancelBtnE">Cancel</string>
    <string name="deleteBtnE">Delete</string>
    <string name="nameChat">Gustavo Isai Gomez Alvarez</string>
    <string name="messageHintTxt">Message</string>
    <string name="locationBtn">Street , Num, Col, City, State</string>
    <string name="postBtn">Post</string>
    <string name="textLocationBtn">Location:</string>
    <string name="titleEditPost">Edit Post</string>
    <string name="titleCreatePost">Create Post</string>
    <string name="priceTxtLay">Price:</string>
    <string name="titleTxtLay">Title:</string>
    <string name="descTxtLay">Description:</string>
    <string name="titleTxtHint">Enter a Title</string>
    <string name="descTxtHint">Enter a Description</string>
</resources>